--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "gulp-cache": "^0.4.4",
     "gulp-clean-css": "^2.0.4",
     "gulp-concat": "^2.6.0",
+    "gulp-data": "^1.2.1",
     "gulp-file-include": "^1.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jade": "^1.1.0",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.5.3",
+    "gulp-watch": "^4.3.11",
+    "gulp-watch-jade": "^1.0.2",
     "imagemin-pngquant": "^4.2.2",
     "node-bourbon": "^4.2.3"
   }
